--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://notif_user:password@localhost:5432/notifications
+DATABASE_URL=postgres://notif_user:password@db:5432/notifications
 JWT_SECRET_KEY=your_jwt_secret_here
